<resources>
    <string name="app_name">MyStorius</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="logout">Keluar</string>
    <string name="preview_image">Preview Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add_story">Add Story</string>
    <string name="empty_image_warning">Empty Image</string>
    <string name="logout_button">Logout Button</string>
    <string name="login_image">Login Image</string>
    <string name="main_image">Main Image</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="story_image">Story Image</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="story_image_item">Story Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enable_location">Enable Location</string>

</resources>